--- a/index.html
+++ b/index.html
@@ -3,14 +3,45 @@ title: Home
 layout: default
 slug: home
 ---
+<section class="cf ph3 ph4-ns pv4 pv6-ns bg-white" id="services">
+  <header class="wow animated fadeInDown">
+    <h1 class="f2 f1-ns lh-title tracked-tight">Services</h1>
+  </header>
+  <div class="w-100 w-third-l fn fl-l pa0 pr4-l">
+    <header class="wow animated fadeIn">
+      <h2 class="f4 f3-ns measure-narrow lh-copy wow animated fadeIn">Web & Interactive Design</h2>
+    </header>
+    <p class="measure lh-copy wow animated fadeInUp">We focus on design and technology as a broader approach to user experience, product performance and consumer perception. A website is a necessary tool for nearly every business and organization. Our interactive design approach focuses on usability, impact, and achieving results.</p>
+    <a class="dib link blue underline-hover b ttu mv4" href="{{ site.baseurl }}/design.html">More<i class="fa fa-fw fa-long-arrow-right"></i></a>
+  </div>
+  <div class="w-100 w-third-l fn fl-l pa0 ph4-l">
+    <header class="wow animated fadeIn">
+      <h2 class="f4 f3-ns measure-narrow lh-copy wow animated fadeIn">Branding & Strategy</h2>
+    </header>
+    <p class="measure lh-copy wow animated fadeInUp">An iterative approach ensures that our clients' goals are realized at every stage of the creative process. By looking at the your goals and budget, we’ll create a strategy to reach your users across all digital mediums that articulates who you are, what you do, and why it matters.</p>
+    <a class="dib link blue underline-hover b ttu mv4" href="{{ site.baseurl }}/strategy.html">More<i class="fa fa-fw fa-long-arrow-right"></i></a>
+  </div>
+  <div class="w-100 w-third-l fn fl-l pa0 pl4-l">
+    <header class="wow animated fadeIn">
+      <h2 class="f4 f3-ns measure-narrow lh-copy wow animated fadeIn">Technology Consulting</h2>
+    </header>
+    <p class="measure lh-copy wow animated fadeInUp">Technology can solve real business problems by enabling new user experiences that promote growth and innovation. Studiocraft takes an agnostic approach towards technology to best fit the needs of you and your customer. The best-planned experience is wasted without a top-notch implementation.</p>
+      <a class="dib link blue underline-hover b ttu mv4" href="{{ site.baseurl }}/technology.html">More<i class="fa fa-fw fa-long-arrow-right"></i></a>
+  </div>
+</section>
 
-<section class="ph3 ph4-ns pv4 pv6-ns bg-white" id="strategy">
+{% include contact.html %}
+{% include location.html %}
+{% include subscribe.html %}
+
+<!-- <section class="ph3 ph4-ns pv4 pv6-ns bg-white" id="strategy">
   <h2 class="f2 f1-ns lh-title tracked-tight wow animated fadeInDown">Strategy</h2>
-  <h3 class="f4 f3-ns normal measure-narrow lh-copy wow animated fadeIn">{{ site.title }} focuses on design and technology as a broader approach to experience, product performance and consumer perception.</h3>
-  <!-- <a class="dib link blue underline-hover b ttu mv4" href="{{ site.baseurl }}/strategy.html">Strategic Capabilities<i class="fa fa-fw fa-long-arrow-right"></i></a> -->
+  <p class="f4 f3-ns measure-narrow lh-copy wow animated fadeIn">{{ site.title }} focuses on design and technology as a broader approach to experience, product performance and consumer perception.</p>
+  <a class="dib link blue underline-hover b ttu mv4" href="{{ site.baseurl }}/strategy.html">More<i class="fa fa-fw fa-long-arrow-right"></i></a>
   <p class="measure lh-copy wow animated fadeIn">{{ site.title }} combines new tools with traditional research expertise to develop a deep understanding of the user's wants and needs, and to guide strategy, design and technology decisions.</p>
   <ul class="list pa0 mv4 measure-wide cf mid-gray wow animated fadeInUp">
     <label class="db mv1 tracked light-silver b ttu"><small>Services</small></label>
+    <li class="fl-ns w-50-ns"><small>Stakeholder interviews</small></li>
     <li class="fl-ns w-50-ns"><small>Brand identity and planning</small></li>
     <li class="fl-ns w-50-ns"><small>Customer research and surveys</small></li>
     <li class="fl-ns w-50-ns"><small>User personas and pathways</small></li>
@@ -21,8 +52,8 @@ slug: home
 </section>
 <section class="ph3 ph4-ns pv4 pv6-ns bg-near-white" id="design">
   <h2 class="f2 f1-ns lh-title tracked-tight wow animated fadeInDown">Design</h2>
-  <h3 class="f4 f3-ns normal measure-narrow lh-copy wow animated fadeIn">{{ site.title }} strives to create work that is distinct, effective, inspirational and forward-thinking.</h3>
-  <!-- <a class="dib link blue underline-hover b ttu mv4" href="{{ site.baseurl }}/design.html">Design Work<i class="fa fa-fw fa-long-arrow-right"></i></a> -->
+  <p class="f4 f3-ns measure-narrow lh-copy wow animated fadeIn">{{ site.title }} strives to create work that is distinct, effective, inspirational and forward-thinking.</p>
+  <a class="dib link blue underline-hover b ttu mv4" href="{{ site.baseurl }}/design.html">More<i class="fa fa-fw fa-long-arrow-right"></i></a>
   <p class="measure lh-copy wow animated fadeIn">An iterative approach ensures that our clients' goals are realized at every stage of the creative process. {{ site.title }} builds an understanding of all the inputs and outputs of your project to create a concise and engaging approach to design.</p>
   <ul class="list pa0 mv4 measure-wide cf mid-gray wow animated fadeInUp">
     <label class="db mv1 tracked light-silver b ttu"><small>Services</small></label>
@@ -35,8 +66,8 @@ slug: home
 </section>
 <section class="ph3 ph4-ns pv4 pv6-ns bg-white" id="technology">
   <h2 class="f2 f1-ns lh-title tracked-tight wow animated fadeInDown">Technology</h2>
-  <h3 class="f4 f3-ns normal measure-narrow lh-copy wow animated fadeIn">{{ site.title }} takes an agnostic approach towards technology to best fit your needs. We believe that technology can solve real problems by enabling new user experiences that promote growth and innovation.</h3>
-  <!-- <a class="dib link blue underline-hover b ttu mv4" href="{{ site.baseurl }}/technology.html">Technology Services<i class="fa fa-fw fa-long-arrow-right"></i></a> -->
+  <p class="f4 f3-ns measure-narrow lh-copy wow animated fadeIn">{{ site.title }} takes an agnostic approach towards technology to best fit your needs. We believe that technology can solve real problems by enabling new user experiences that promote growth and innovation.</p>
+  <a class="dib link blue underline-hover b ttu mv4" href="{{ site.baseurl }}/technology.html">More<i class="fa fa-fw fa-long-arrow-right"></i></a>
   <p class="measure lh-copy wow animated fadeIn">We build across and for all devices, focusing on a client's entire digital ecosystem with context, mobile and user center design at its core to turn your ideas and designs into functional, reliable products and services.</p>
   <ul class="list pa0 mv4 measure-wide cf mid-gray wow animated fadeInUp">
     <label class="db mv1 tracked light-silver b ttu"><small>Services</small></label>
@@ -80,50 +111,4 @@ slug: home
     </ul>
   </div>
 </section>
-{% include contact.html %}
-<section class="dt-ns w-100 near-white bg-near-black" id="contact">
-  <div class="db dtc-ns w-100 w-40-ns ph3 ph4-ns pv4 pv6-ns">
-    <h2 class="f4 f3-ns mv0 lh-title tracked-tight wow animated fadeInDown" data-action="cursor">{{ site.title }}</h2>
-    <address class="fs-normal mv4 wow animated fadeInUp">
-      <label class="db mv1 tracked silver b ttu"><small>Contact</small></label>
-      <ul class="list pa0 mv0 lh-copy">
-        <li><a class="link underline-hover mid-gray" href="mailto:hello@studiocraft.cc"><abbr title="Email" aria-hidden="true"><i class="fa fa-fw fa-envelope"></i></abbr>hello@studiocraft.cc</a></li>
-        <li><a class="link underline-hover mid-gray" href="tel:13472211926"><abbr title="Phone"><i class="fa fa-fw fa-phone" aria-hidden="true"></i></abbr>(347) 221-1926</a></li>
-        <li><a class="link underline-hover mid-gray" href="https://goo.gl/maps/ePAZK239wrC2" target="_blank"><abbr title="Location"><i class="fa fa-fw fa-globe" aria-hidden="true"></i></abbr>Brooklyn, NY</a></li>
-      </ul>
-    </address>
-    <address class="fs-normal mv4 wow animated fadeInUp">
-      <label class="db mv1 tracked silver b ttu"><small>Founder &amp; Creative Director</small></label>
-      <ul class="list pa0 mv0 lh-copy">
-        <li><span>Bryan Colosky</span></li>
-        <li><a class="link underline-hover mid-gray" href="mailto:bryan.colosky@studiocraft.cc"><abbr title="Email"><i class="fa fa-fw fa-envelope" aria-hidden="true"></i></abbr>bryan.colosky@studiocraft.cc</a></li>
-      </ul>
-    </address>
-    <address class="fs-normal mv4 wow animated fadeInUp">
-      <label class="db mv1 tracked silver b ttu"><small>Partner</small></label>
-      <ul class="list pa0 mv0 lh-copy">
-        <li><span>Melda Kahraman</span></li>
-        <li><a class="link underline-hover mid-gray" href="mailto:melda.kahraman@studiocraft.cc"><abbr title="Email"><i class="fa fa-fw fa-envelope" aria-hidden="true"></i></abbr>melda.kahraman@studiocraft.cc</a></li>
-      </ul>
-    </address>
-  </div>
-  <div class="dn dtc-ns w-100 w-60-ns relative">
-    <div id="map" class="absolute absolute--fill wow animated fadeIn" style="background-color:transparent"></div>
-  </div>
-</section>
-<section class="ph3 ph4-ns pv4 pv5-ns near-black bg-near-white">
-    <h2 class="f2 f1-ns mv0 lh-title tracked-tight wow animated fadeInDown">Enter your Email</h2>
-    <h3 class="f4 f3-ns mv2 normal lh-copy wow animated fadeIn">Receive {{ site.title }} updates, news, and research surveys.</h3>
-    <div id="mc_response"></div>
-    <div id="mc_embed_signup">
-      <form class="wow animated fadeInUp" action="http://studiocraft.us13.list-manage.com/subscribe/post-json?u=53d65332ef68bfdcc203b272f&amp;id=da5d8d18d8&amp;c=?" method="GET" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-        <div id="mc_embed_signup_scroll">
-          <div class="mc-field-group input-group">
-            <label class="dn" for="mce-EMAIL">Email</label>
-            <input type="email" value="" name="EMAIL" class="required w5 email w-third-ns input-reset dib mv3 br-pill ba ph4 pv3 outline-0 b--light-silver" id="mce-EMAIL" placeholder="Email">
-          </div>
-        </div>
-        <input type="submit" class="input-reset mv3 ph4 pv3 outline-0 mh2 br-pill ba bw1 b ttu b--dark-gray dark-gray bg-transparent dim" value="Subscribe">
-      </form>
-    </div>
-</section>
+{% include contact.html %} -->
