--- a/strategy.html
+++ b/strategy.html
@@ -4,7 +4,7 @@ layout: page
 slug: strategy
 ---
 
-<section class="ph3 ph4-ns pv4 pv6-ns tc tl-ns bg-near-white">
+<!-- <section class="ph3 ph4-ns pv4 pv6-ns tc tl-ns bg-near-white">
   <div data-flickity='{ "wrapAround": true, "adaptiveHeight": true, "lazyLoad": true }'>
     <center class="w-100">
       <figure class="mw8 center tc cf">
@@ -52,22 +52,13 @@ slug: strategy
       </figure>
     </center>
   </div>
-</section>
+</section> -->
 <section class="ph3 ph4-ns pv4 pv6-ns bg-white">
-  <h2 class="f2 f1-ns lh-title tracked-tight wow animated fadeInDown">Stakeholder Interviews</h2>
-  <h3 class="f4 f3-ns normal measure-narrow lh-copy wow animated fadeIn">At {{ site.title }}, during the early stages of any engagement, we are focused on conversation and discussion to better understand the importantance of vision and objectives.</h3>
-  <a class="dib link blue underline-hover b ttu mv4" href="{{ site.baseurl }}/#">Recent Case Studies<i class="fa fa-fw fa-long-arrow-right"></i></a>
-  <p class="measure lh-copy wow animated fadeIn">Gathering all specific requirements, business and professional cases, and proposed or desired capabilities to inform a project plan when making crucial decisions regarding objectives, scope, schedule, resources, and deliverables.</p>
-  <ul class="list pa0 mv4 measure-wide cf mid-gray wow animated fadeInUp">
-    <label class="db mv1 tracked light-silver b ttu"><small>Capabilities</small></label>
-    <li class="fl-ns w-50-ns"><small>Stakeholder insights and keynotes</small></li>
-    <li class="fl-ns w-50-ns"><small>Functionality and requirement gathering</small></li>
-    <li class="fl-ns w-50-ns"><small>Identifying business and user requirements</small></li>
-    <li class="fl-ns w-50-ns"><small>Defining functional requirements</small></li>
-  </ul>
+  <p class="f4 f3-ns normal measure-narrow lh-copy wow animated fadeIn">At {{ site.title }}, during the early stages of any engagement, we are focused on conversation and discussion to better understand the importantance of vision and objectives.</p>
+  <p class="measure lh-copy wow animated fadeIn">We start by gathering all specific requirements, business goals, and proposed or desired capabilities to inform a project plan when making crucial decisions regarding objectives, scope, schedule, resources, and deliverables.</p>
 </section>
 <section class="ph3 ph4-ns pv4 pv6-ns bg-near-white">
-  <h2 class="f2 f1-ns lh-title tracked-tight wow animated fadeInDown">User Research and Surveys</h2>
+  <h2 class="f2 f1-ns lh-title tracked-tight wow animated fadeInDown">Our Services</h2>
   <h3 class="f4 f3-ns normal measure-narrow lh-copy wow animated fadeIn">{{ site.title }} focuses on understanding your user's behaviors, needs, and motivations.</h3>
   <a class="dib link blue underline-hover b ttu mv4" href="{{ site.baseurl }}/#">Recent Work<i class="fa fa-fw fa-long-arrow-right"></i></a>
   <p class="measure lh-copy wow animated fadeIn">Understanding your audience helps identify project challenges upfront and respond to users needs while still meeting your professional goals.</p>
